Fixed cube rotation and faces overlapping

--- a/assets/visuals/style.css
+++ b/assets/visuals/style.css
@@ -194,6 +194,20 @@ h3 {
   font-size: 1.5rem;
 }
 
+#cube-wrapper {
+  width: 300px; /* Área más grande */
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: grab; /* Indica que se puede arrastrar */
+}
+
+#cube-wrapper:active {
+  cursor: grabbing;
+}
+
+
 .cube, .cube * {
   position: absolute;
   top: 25vh;
